flux/apps/int/qbittorrent/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: qbittorrent-svc
  labels:
    app.kubernetes.io/name: qbittorrent
    app.kubernetes.io/instance: qbittorrent
spec:
  selector:
    app.kubernetes.io/name: qbittorrent
    app.kubernetes.io/instance: qbittorrent
  ports:
    - name: http
      protocol: TCP
      port: 8080
      targetPort: 8080
  type: ClusterIP
